PopplerExtractor: Trim the guessed title to the first 50 characters

Sometimes the guessed title is just too long, in those cases we try to
trim it to the first 50 characters.

BUG: 321478